--- a/index.css
+++ b/index.css
@@ -29,6 +29,12 @@ body {
     background-color: yellow;
 }
 
+.artwork canvas {
+    width: 40%;
+    height: 60%;
+    border: 1px blue;
+}
+
 .footer {
     grid-column: 1 / -1;
     background-color: aqua;
