--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
 .container {
     display: grid;
     grid-template-columns: 4fr 4fr;
-    grid-template-rows: 3rem auto 3rem;
+    grid-template-rows: 3rem auto auto 3rem;
     row-gap: 1em;
 }
 
@@ -30,9 +30,15 @@ body {
 }
 
 .artwork canvas {
-    width: 40%;
-    height: 60%;
     border: 1px blue;
+    width: 100%;
+    height: 100%;
+}
+
+.about {
+    grid-row: 3 / 4;
+    margin-left: 1em;
+    margin-right: 1em;
 }
 
 .footer {
