--- a/index.css
+++ b/index.css
@@ -35,6 +35,10 @@ body {
     height: 100%;
 }
 
+#svg-background {
+    fill: royalblue;
+}
+
 .about {
     grid-row: 3 / 4;
     margin-left: 1em;
