--- a/index.css
+++ b/index.css
@@ -1,18 +1,26 @@
+:root {
+    --complementary-bg-color: rgb(32, 35, 36);
+    --background-color: #181a1b;
+    --text-color: #e8e6e3;
+}
+
 body {
     margin: 0;
     font: 15px times;
+    background-color: var(--background-color);
+    color: var(--text-color);
 }
 
 .container {
     display: grid;
-    grid-template-columns: 4fr 4fr;
-    grid-template-rows: 3rem auto auto auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 3rem auto auto auto auto auto;
     row-gap: 1em;
 }
 
 .header {
     grid-column: 1 / -1;
-    background-color: purple;
+    background-color: rgb(50, 53, 55);
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -26,13 +34,18 @@ body {
     margin-right: 1em;
     align-items: center;
     grid-row: 2 / 3;
-    background-color: yellow;
+    background-color: var(--complementary-bg-color);
 }
 
 .artwork canvas {
     border: 1px blue;
     width: 100%;
-    height: 100%;
+    height: auto;
+}
+
+.artwork svg {
+    width: 100%;
+    height: auto;
 }
 
 #svg-background {
@@ -41,18 +54,64 @@ body {
 
 .about {
     grid-row: 3 / 4;
+    grid-column: 1 / -1;
     margin-left: 1em;
     margin-right: 1em;
+    background-color: var(--complementary-bg-color);
 }
 
 .footer {
     display: flex;
     flex-direction: column;
     grid-column: 1 / -1;
-    grid-row: 4 / 5;
-    background-color: aqua;
+    grid-row: 6 / 7;
+    background-color: var(--complementary-bg-color);
+}
+
+.docs {
+    grid-row: 4/5;
+    grid-column: 1 / -1;
+    display: flex;
 }
 
 .info {
+    grid-row: 5/6;
+    grid-column: 1 / -1;
     display: none;
+}
+
+.info-rev {
+    border-radius: 2em;
+    margin: auto;
+    width: auto;
+    border-style: none;
+    padding: 1em;
+    background-color: #03DAC6;
+}
+
+.info-rev :hover {
+
+}
+
+@media screen and (max-width: 700px) {
+    .container {
+        grid-template-rows: 3rem auto auto auto auto;
+    }
+
+    #canvas-artwork {
+        grid-row: 2/3;
+        grid-column: 1 / -1;
+    }
+    #svg-artwork {
+        grid-row: 3/4;
+        grid-column: 1 / -1;
+    }
+
+    .about {
+        grid-row: 4/5;
+    }
+
+    .footer {
+        grid-row: 5/6;
+    }
 }
