--- a/index.css
+++ b/index.css
@@ -91,6 +91,9 @@ body {
     grid-row: 5/6;
     grid-column: 1 / -1;
     display: none;
+    padding: 1em;
+    margin: 1em;
+    background-color: var(--complementary-bg-color);
 }
 
 .info-rev {
