--- a/index.css
+++ b/index.css
@@ -45,12 +45,13 @@ body {
 }
 
 .artwork canvas {
-    border: 1px blue;
+    border: 2px white;
     width: 100%;
     height: auto;
 }
 
 .artwork svg {
+    border: 2px white;
     width: 100%;
     height: auto;
 }
