--- a/index.css
+++ b/index.css
@@ -66,6 +66,10 @@ body {
     fill: royalblue;
 }
 
+#svg-angry-face {
+    display: none;
+}
+
 .about {
     grid-row: 3 / 4;
     grid-column: 1 / -1;
@@ -98,6 +102,7 @@ body {
 .info {
     grid-row: 5/6;
     grid-column: 1 / -1;
+    grid-template-columns: 1fr 1fr;
     display: none;
 }
 
@@ -151,5 +156,9 @@ body {
 
     .footer {
         grid-row: 7/8;
+    }
+
+    .info {
+        grid-template-columns: 1fr;
     }
 }
