--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 html {
     height: 100%;
-    font-family: "Maitree", Serif !important;
+    font-family: "Maitree", Serif, serif !important;
 }
 
 body {
